--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cornerstone Mechanics, LLC.</title>
-  <link rel="stylesheet" href="css/style.css">
   <script src="https://kit.fontawesome.com/ceaeb846ed.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link href="/css/custom.css" rel="stylesheet">
+  <link href="/css/style.css" rel="stylesheet">
   <meta name="description" content="">
 
   <link rel="icon" href="/favicon.ico" sizes="any">
@@ -19,12 +20,14 @@
   <meta name="theme-color" content="#fafafa">
 </head>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-  <div class="container-sm">
+<nav class="navbar navbar-expand-lg navbar-light bg-body fixed-top">
+  <div class="container-sm justify-content-center">
     <!-- TODO: Replace with logo, center phone number -->
-    <a class="navbar-brand">Cornerstone Mechanics, LLC.</a>
+    <a class="navbar-brand">
+      Cornerstone Mechanics, LLC.
+    </a>
 
-    <div class="container-sm text-center">
+    <div class="container-xs text-center">
       <a href="tel:+6268774750"><strong>+1 626-877-4570</strong></a>
     </div>
 
@@ -77,6 +80,9 @@
 </nav>
 
 <body>
+  <div class="d-flex justify-content-center py-2">
+    <img src="/img/logo.png" width="350">
+  </div>
   <section class="container-fluid gx-0">
     <div id="hero-image">
       <section class="container py-2">
@@ -98,15 +104,45 @@
 
       <div class="container px-0 mt-5">
         <h3 class="pb-3">Our Benefits</h3>
-        <div class="row">
-          <div class="col-md-4 bg-secondary">
-            <a>test</a>
+        <div class="row row-cols-1 row-cols-md-3">
+          <div class="col">
+            <div class="card mb-3">
+              <img
+                class="card-img-top"
+                src="holder.js/100x180/"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h4 class="card-title">Title</h4>
+                <p class="card-text">Text</p>
+              </div>
+            </div>
           </div>
-          <div class="col-md-4 bg-secondary">
-            <a>test</a>
+          <div class="col">
+            <div class="card mb-3">
+              <img
+                class="card-img-top"
+                src="holder.js/100x180/"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h4 class="card-title">Title</h4>
+                <p class="card-text">Text</p>
+              </div>
+            </div>
           </div>
-          <div class="col-md-4 bg-secondary">
-            <a>test</a>
+          <div class="col">
+            <div class="card">
+              <img
+                class="card-img-top"
+                src="holder.js/100x180/"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h4 class="card-title">Title</h4>
+                <p class="card-text">Text</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
