--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="https://kit.fontawesome.com/ceaeb846ed.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <link href="/css/custom.css" rel="stylesheet">
   <link href="/css/style.css" rel="stylesheet">
   <meta name="description" content="">
@@ -18,16 +19,25 @@
 
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#fafafa">
+
+  <!-- <script>
+    $(document).ready(function() {
+      $('.navbar').css('display','none');
+      $(window).scroll(function() {
+          var height = $(window).scrollTop();
+          if (height > 200) {
+              $('.navbar').css('display','block');
+          } else {
+            $('.navbar').css('display','none');
+          }
+        });
+    });
+  </script> -->
 </head>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-body fixed-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-body fixed-top border-bottom border-dark">
   <div class="container-sm justify-content-center">
-    <!-- TODO: Replace with logo, center phone number -->
-    <a class="navbar-brand">
-      Cornerstone Mechanics, LLC.
-    </a>
-
-    <div class="container-xs text-center">
+    <div class="container-sm" id="phone-number">
       <a href="tel:+6268774750"><strong>+1 626-877-4570</strong></a>
     </div>
 
@@ -72,7 +82,7 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto">
             <a href="#" class="nav-item nav-link active">Home</a>
-            <a href="#" class="nav-item nav-link">Services</a>
+            <a href="#" class="nav-item nav-link">Merchandise</a>
             <a href="#" class="nav-item nav-link">Contact Us</a>
         </div>
     </div> -->
@@ -89,7 +99,9 @@
         <h1>We bring reliable auto care to you.</h1>
         <div>
           <!-- TODO Send user to schedule appointment section -->
-          <button id="hero-button" type="button" class="btn btn-primary" href="tel:6268774750">Schedule an appointment</button>
+          <a href="#appointment-form">
+            <button id="hero-button" type="button" class="btn btn-primary">Schedule an appointment</button>
+          </a>
         </div>
       </section>
     </div>
@@ -99,56 +111,56 @@
     <div>
       <div class="textBox">
         <h3>About Us</h3>
-        <p class="mt-1">Cornerstone Mechanics offers quality auto service at affordable rates. Our experienced technicians will come to you to fix your car, for anything from regular maintenance to advanced troubleshooting.</p>
+        <p class="mt-1">Cornerstone Mechanics is a team of auto repair specialists that can travel to assist anyone around LA County and Orange County. We provide a wide range of services up to dealership standards including preventative maintenance, pre-purchase inspections, and interval maintenance. </p>
       </div>
 
       <div class="container px-0 mt-5">
         <h3 class="pb-3">Our Benefits</h3>
         <div class="row row-cols-1 row-cols-md-3">
           <div class="col">
-            <div class="card mb-3">
+            <div class="card mb-3 text-center">
               <img
                 class="card-img-top"
                 src="holder.js/100x180/"
                 alt="Card image cap"
               />
               <div class="card-body">
-                <h4 class="card-title">Title</h4>
-                <p class="card-text">Text</p>
+                <h4 class="">We are mobile</h4>
+                <p class="card-text">Our technicians will come to you, allowing you to save money on towing fees while staying in the comfort of your home.</p>
               </div>
             </div>
           </div>
           <div class="col">
-            <div class="card mb-3">
+            <div class="card mb-3 text-center">
               <img
                 class="card-img-top"
                 src="holder.js/100x180/"
                 alt="Card image cap"
               />
               <div class="card-body">
-                <h4 class="card-title">Title</h4>
-                <p class="card-text">Text</p>
+                <h4 class="card-title">Quality Service</h4>
+                <p class="card-text">We provide the best parts and service to ensure that our repairs get the job done with minimal appointments.</p>
               </div>
             </div>
           </div>
           <div class="col">
-            <div class="card">
+            <div class="card mb-3 text-center">
               <img
                 class="card-img-top"
                 src="holder.js/100x180/"
                 alt="Card image cap"
               />
               <div class="card-body">
-                <h4 class="card-title">Title</h4>
-                <p class="card-text">Text</p>
+                <h4 class="card-title">Experience</h4>
+                <p class="card-text">With over 15 years of experience and training, you can rest assured that your vehicle will be well taken care of.</p>
               </div>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="container px-0 mt-5">
-        <h3 class="pb-3">Schedule an Appointment</h3>
+      <div class="container px-0 mt-5" id="appointment-form">
+        <h3 class="pb-3">Contact Us or Make an Appointment</h3>
         <!-- TODO: Add Netlify integration, add a success message response as another page? https://www.youtube.com/watch?v=myqzqyuic3I-->
         <form name="contact" method="POST" data-netlify="true" onSubmit="submit">
           <div class="form-row mb-4">
