--- a/index.html
+++ b/index.html
@@ -13,35 +13,22 @@
   <link href="/css/style.css" rel="stylesheet">
   <meta name="description" content="">
 
+  <!-- TODO: Favicon setup with old logo -->
   <link rel="icon" href="/favicon.ico" sizes="any">
   <link rel="icon" href="/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="icon.png">
 
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#fafafa">
-
-  <!-- <script>
-    $(document).ready(function() {
-      $('.navbar').css('display','none');
-      $(window).scroll(function() {
-          var height = $(window).scrollTop();
-          if (height > 200) {
-              $('.navbar').css('display','block');
-          } else {
-            $('.navbar').css('display','none');
-          }
-        });
-    });
-  </script> -->
 </head>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-body fixed-top border-bottom border-dark">
   <div class="container-sm justify-content-center">
     <div class="container-sm" id="phone-number">
       <a href="tel:+6268774750"><strong>+1 626-877-4570</strong></a>
+      <p>Cornerstone Mechanics, LLC.</p>
     </div>
 
-    <!-- TODO: Social Media links -->
     <ul class="navbar-nav d-flex flex-row" id="social-media">
       <li class="nav-item">
           <a class="nav-link" href="https://www.facebook.com/cornerstonemechanicsllc">
@@ -90,99 +77,122 @@
 </nav>
 
 <body>
-  <div class="d-flex justify-content-center py-2">
+  <div class="container py-2">
     <img src="/img/logo.png" width="350">
+    <div class="textBox">
+      <h3>We bring reliable auto care to you.</h3>
+      <p class="mt-1">Cornerstone Mechanics is a team of auto repair specialists that can travel to assist anyone around LA County and Orange County. We provide a wide range of services up to dealership standards including preventative maintenance, pre-purchase inspections, and interval maintenance. </p>
+      <a href="#appointment-form">
+        <button id="hero-button" type="button" class="btn btn-primary">Schedule an appointment</button>
+      </a>
+    </div>
   </div>
-  <section class="container-fluid gx-0">
-    <div id="hero-image">
-      <section class="container py-2">
-        <h1>We bring reliable auto care to you.</h1>
-        <div>
-          <!-- TODO Send user to schedule appointment section -->
-          <a href="#appointment-form">
-            <button id="hero-button" type="button" class="btn btn-primary">Schedule an appointment</button>
-          </a>
+  <section class="container gx-0">
+        
+    <div id="carouselExampleAutoplaying" class="carousel slide mx-auto" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="/img/20240326_164542.jpg" class="d-block">
         </div>
-      </section>
+        <div class="carousel-item">
+          <img src="/img/20231209_143550.jpg" class="d-block">
+        </div>
+        <div class="carousel-item">
+          <img src="/img/20240406_161847 a.jpg" class="d-block">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
   </section>
 
-  <section class="container-sm px-4 py-5">
-    <div>
-      <div class="textBox">
-        <h3>About Us</h3>
-        <p class="mt-1">Cornerstone Mechanics is a team of auto repair specialists that can travel to assist anyone around LA County and Orange County. We provide a wide range of services up to dealership standards including preventative maintenance, pre-purchase inspections, and interval maintenance. </p>
-      </div>
-
-      <div class="container px-0 mt-5">
-        <h3 class="pb-3">Our Benefits</h3>
-        <div class="row row-cols-1 row-cols-md-3">
-          <div class="col">
-            <div class="card mb-3 text-center">
-              <img
-                class="card-img-top"
-                src="holder.js/100x180/"
-                alt="Card image cap"
-              />
-              <div class="card-body">
-                <h4 class="">We are mobile</h4>
-                <p class="card-text">Our technicians will come to you, allowing you to save money on towing fees while staying in the comfort of your home.</p>
-              </div>
+  <section class="container-sm px-4 py-3">
+    <div class="container px-0 mt-5">
+      <h3 class="pb-3">Our Benefits</h3>
+      <div class="row row-cols-1 row-cols-md-3">
+        <div class="col">
+          <div class="card border-0 mb-3 text-center">
+            <img class="card-img-top mx-auto benefit-icon" src="/img/icons/repair.png"/>
+            <div class="card-body">
+              <h4 class="">Mobile Servicing</h4>
+              <p class="card-text">Our technicians will come to you, allowing you to save money on towing fees while staying in the comfort of your home.</p>
             </div>
           </div>
-          <div class="col">
-            <div class="card mb-3 text-center">
-              <img
-                class="card-img-top"
-                src="holder.js/100x180/"
-                alt="Card image cap"
-              />
-              <div class="card-body">
-                <h4 class="card-title">Quality Service</h4>
-                <p class="card-text">We provide the best parts and service to ensure that our repairs get the job done with minimal appointments.</p>
-              </div>
+        </div>
+        <div class="col">
+          <div class="card border-0 mb-3 text-center">
+            <img class="card-img-top mx-auto benefit-icon" src="/img/icons/tools.png"/>
+            <div class="card-body">
+              <h4 class="card-title">Quality Assurance</h4>
+              <p class="card-text">We provide the best parts and service to ensure that our repairs get the job done with minimal appointments.</p>
             </div>
           </div>
-          <div class="col">
-            <div class="card mb-3 text-center">
-              <img
-                class="card-img-top"
-                src="holder.js/100x180/"
-                alt="Card image cap"
-              />
-              <div class="card-body">
-                <h4 class="card-title">Experience</h4>
-                <p class="card-text">With over 15 years of experience and training, you can rest assured that your vehicle will be well taken care of.</p>
-              </div>
+        </div>
+        <div class="col">
+          <div class="card border-0 mb-3 text-center">
+            <img class="card-img-top mx-auto benefit-icon" src="/img/icons/mechanic.png"/>
+            <div class="card-body">
+              <h4 class="card-title">Dependable Experts</h4>
+              <p class="card-text">With over 15 years of experience and training, you can rest assured that your vehicle will be well taken care of.</p>
             </div>
           </div>
         </div>
       </div>
+    </div>
 
-      <div class="container px-0 mt-5" id="appointment-form">
+    <div class="row px-0 mt-5">
+      <div class="col-md-6" id="appointment-form">
         <h3 class="pb-3">Contact Us or Make an Appointment</h3>
         <!-- TODO: Add Netlify integration, add a success message response as another page? https://www.youtube.com/watch?v=myqzqyuic3I-->
         <form name="contact" method="POST" data-netlify="true" onSubmit="submit">
-          <div class="form-row mb-4">
-            <div class="form-group col-md-6 mt-3">
-              <input type="text" class="form-control" id="form-name" placeholder="Name" maxlength="50" required name="name">
-            </div>
-            <div class="form-group col-md-6 mt-3">
-              <input type="email" class="form-control" id="form-email" placeholder="Email" maxlength="50" required name="email">
-            </div>
-            <div class="form-group col-md-6 mt-3">
-              <input type="tel" class="form-control" id="form-phone" placeholder="Phone Number" maxlength="15" required name="phone">
-            </div>
-            <div class="form-group col-md-6 mt-3">
-              <input type="text" class="form-control" id="form-vehicle" placeholder="Vehicle Make and Model" maxlength="50" name="vehicle">
-            </div>
-            <div class="form-group col-md-6 mt-3">
-              <textarea class="form-control" id="form-message" placeholder="How can we help?" rows="6" maxlength="500" name="message"></textarea>
-            </div>
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <input type="text" class="form-control" id="form-name" placeholder="Name" maxlength="50" required name="name">
+          <input type="email" class="form-control col-md-6 mt-3" id="form-email" placeholder="Email" maxlength="50" required name="email">
+          <input type="tel" class="form-control col-md-6 mt-3" id="form-phone" placeholder="Phone Number" maxlength="15" required name="phone">
+          <input type="text" class="form-control col-md-6 mt-3" id="form-vehicle" placeholder="Vehicle Make and Model" maxlength="50" name="vehicle">
+          <textarea class="form-control col-md-6 mt-3" id="form-message" placeholder="How can we help?" rows="6" maxlength="500" name="message"></textarea>
+          <button type="submit" class="btn btn-primary mt-4">Submit</button>
         </form>
-        
+      </div>
+      <!-- TODO: Set up mobile breakpoints, larger device should have 400px height-->
+      <img id="form-image" class="col-md-6 mt-5" style="width: auto; height: 300px;" src="/img/engine.png"/>
+    </div>
+  </div>
+
+  <!-- TODO: Merch section on its own page? -->
+  <div class="container px-0 mt-5">
+    <h3 class="pb-3">Merchandise</h3>
+    <div class="row row-cols-1 row-cols-md-3">
+      <div class="col">
+        <div class="card mb-3 text-center">
+          <img
+            class="card-img-top"
+            src="/img/merch_mug.jpeg"
+            alt="Mug"
+          />
+          <div class="card-body">
+            <h4 class="card-title">Coffee Mug</h4>
+            <h5 class="card-subtitle">$11.99</h4>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card mb-3 text-center">
+          <img
+            class="card-img-top"
+            src="/img/merch_glass.jpeg"
+            alt="Glass"
+          />
+          <div class="card-body">
+            <h4 class="card-title">Glass Cup</h4>
+            <h5 class="card-subtitle">$14.99</h4>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -193,8 +203,9 @@
 
 <footer id="site-footer">
   <div class="container py-3">
-    <div class="row">
-      <span class="text-center">Copyright © 2024</span>
+    <div class="row text-center">
+      <a href="https://www.flaticon.com/authors/icongeek26">Icons created by Icongeek26</a>
+      <span>Copyright © 2024</span>
     </div>
   </div>
 </footer>
