--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="container-sm justify-content-center">
     <div class="container-sm" id="phone-number">
       <a href="tel:+6268774750"><strong>+1 626-877-4570</strong></a>
-      <p>Cornerstone Mechanics, LLC.</p>
+      <h4>Cornerstone Mechanics, LLC.</h4>
     </div>
 
     <ul class="navbar-nav d-flex flex-row" id="social-media">
