--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link href="/css/style.css" rel="stylesheet">
     <meta name="description" content="">
     <!-- TODO: Favicon setup with old logo -->
-    <link rel="icon" href="/favicon.ico" sizes="any">
-    <link rel="icon" href="/icon.svg" type="image/svg+xml">
+    <link rel="icon" href="favicon.ico" sizes="any">
+    <link rel="icon" href="icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="icon.png">
     <link rel="manifest" href="site.webmanifest">
     <meta name="theme-color" content="#fafafa">
@@ -56,7 +56,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://nextdoor.com/pages/cornerstone-mechanics-hacienda-heights-ca/" target="_blank" rel="noopener noreferrer">
-              <img src="../img/nextdoor.svg" class="fa-brands">
+              <img src="img/nextdoor.svg" class="fa-brands">
             </a>
           </li>
         </ul>
