--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <link href="/css/custom.css" rel="stylesheet">
-    <link href="/css/style.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <meta name="description" content="">
     <!-- TODO: Favicon setup with old logo -->
     <link rel="icon" href="favicon.ico" sizes="any">
@@ -65,7 +65,7 @@
     </nav>
 
     <div class="container py-2">
-      <img src="/img/logo.png" width="350">
+      <img src="img/logo.png" width="350">
       <div class="textBox">
         <h3>We bring reliable auto care to you.</h3>
         <p class="mt-1">Cornerstone Mechanics is a team of auto repair specialists that can travel to assist anyone around LA County and Orange County. We provide a wide range of services up to dealership standards including preventative maintenance, pre-purchase inspections, and interval maintenance. </p>
@@ -79,13 +79,13 @@
       <div id="carouselExampleAutoplaying" class="carousel slide mx-auto" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/img/20240326_164542.jpg" class="d-block">
+            <img src="img/20240326_164542.jpg" class="d-block">
           </div>
           <div class="carousel-item">
-            <img src="/img/20231209_143550.jpg" class="d-block">
+            <img src="img/20231209_143550.jpg" class="d-block">
           </div>
           <div class="carousel-item">
-            <img src="/img/20240406_161847 a.jpg" class="d-block">
+            <img src="img/20240406_161847 a.jpg" class="d-block">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -105,7 +105,7 @@
         <div class="row row-cols-1 row-cols-md-3">
           <div class="col">
             <div class="card border-0 mb-3 text-center">
-              <img class="card-img-top mx-auto benefit-icon" src="/img/icons/repair.png" />
+              <img class="card-img-top mx-auto benefit-icon" src="img/icons/repair.png" />
               <div class="card-body">
                 <h4 class="">Mobile Servicing</h4>
                 <p class="card-text">Our technicians will come to you, allowing you to save money on towing fees while staying in the comfort of your home.</p>
@@ -114,7 +114,7 @@
           </div>
           <div class="col">
             <div class="card border-0 mb-3 text-center">
-              <img class="card-img-top mx-auto benefit-icon" src="/img/icons/tools.png" />
+              <img class="card-img-top mx-auto benefit-icon" src="img/icons/tools.png" />
               <div class="card-body">
                 <h4 class="card-title">Quality Assurance</h4>
                 <p class="card-text">We provide the best parts and service to ensure that our repairs get the job done with minimal appointments.</p>
@@ -123,7 +123,7 @@
           </div>
           <div class="col">
             <div class="card border-0 mb-3 text-center">
-              <img class="card-img-top mx-auto benefit-icon" src="/img/icons/mechanic.png" />
+              <img class="card-img-top mx-auto benefit-icon" src="img/icons/mechanic.png" />
               <div class="card-body">
                 <h4 class="card-title">Dependable Experts</h4>
                 <p class="card-text">With over 15 years of experience and training, you can rest assured that your vehicle will be well taken care of.</p>
@@ -147,7 +147,7 @@
           </form>
         </div>
         <!-- TODO: Set up mobile breakpoints, larger device should have 400px height-->
-        <img id="form-image" class="col-md-6 mt-5" style="width: auto; height: 300px;" src="/img/engine.png" />
+        <img id="form-image" class="col-md-6 mt-5" style="width: auto; height: 300px;" src="img/engine.png" />
       </div>
 
       <!-- TODO: Merch section on its own page? -->
@@ -156,7 +156,7 @@
         <div class="row row-cols-1 row-cols-md-4">
           <div class="col">
             <div class="card mb-3 text-center">
-              <img class="card-img-top merch-img" src="/img/merch_mug.jpeg" alt="Mug" />
+              <img class="card-img-top merch-img" src="img/merch_mug.jpeg" alt="Mug" />
               <div class="card-body">
                 <h4 class="card-title">Coffee Mug</h4>
                 <h5 class="card-subtitle">$12</h5>
@@ -165,7 +165,7 @@
           </div>
           <div class="col">
             <div class="card mb-3 text-center">
-              <img class="card-img-top merch-img" src="/img/merch_glass.jpeg" alt="Glass" />
+              <img class="card-img-top merch-img" src="img/merch_glass.jpeg" alt="Glass" />
               <div class="card-body">
                 <h4 class="card-title">Glass Cup</h4>
                 <h5 class="card-subtitle">$15</h5>
@@ -174,7 +174,7 @@
           </div>
           <div class="col">
             <div class="card mb-3 text-center">
-              <img class="card-img-top merch-img" src="/img/merch_shirt.jpg" alt="Shirt" />
+              <img class="card-img-top merch-img" src="img/merch_shirt.jpg" alt="Shirt" />
               <div class="card-body">
                 <h4 class="card-title">T-shirt</h4>
                 <h5 class="card-subtitle">$30</h5>
@@ -183,7 +183,7 @@
           </div>
           <div class="col">
             <div class="card mb-3 text-center">
-              <img class="card-img-top merch-img" src="/img/merch_cap.jpg" alt="Cap" />
+              <img class="card-img-top merch-img" src="img/merch_cap.jpg" alt="Cap" />
               <div class="card-body">
                 <h4 class="card-title">Snapback Cap</h4>
                 <h5 class="card-subtitle">$30</h5>
