--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-body fixed-top border-bottom border-dark">
-      <div class="container-sm justify-content-center">
-        <div class="container-sm" id="phone-number">
+      <div class="container d-flex">
+        <div class="container-sm" id="nav-phone">
           <a href="tel:+6268774750">
             <strong>+1 626-877-4570</strong>
           </a>
-          <h4>Cornerstone Mechanics, LLC.</h4>
         </div>
-        <ul class="navbar-nav d-flex flex-row" id="social-media">
+        <h4 class="container-sm" id="nav-name">Cornerstone Mechanics, LLC.</h4>
+        <ul class="container-sm navbar-nav d-flex flex-row mx-auto" id="nav-social">
           <li class="nav-item">
             <a class="nav-link" href="https://www.facebook.com/cornerstonemechanicsllc" target="_blank" rel="noopener noreferrer">
               <i class="fa-brands fa-facebook-f"></i>
