--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-body fixed-top border-bottom border-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg-secondary fixed-top border-bottom border-dark">
       <div class="container d-flex">
         <div class="container-sm" id="nav-phone">
           <a href="tel:+6268774750">
-            <strong>+1 626-877-4570</strong>
+            <strong>+1 626-877-4750</strong>
           </a>
         </div>
         <h4 class="container-sm" id="nav-name">Cornerstone Mechanics, LLC.</h4>
@@ -104,7 +104,7 @@
         <h2 class="pb-3">Our Benefits</h2>
         <div class="row row-cols-1 row-cols-md-3">
           <div class="col">
-            <div class="card border-0 mb-3 text-center">
+            <div class="card bg-primary border-0 mb-3 text-center">
               <img class="card-img-top mx-auto benefit-icon" src="img/icons/repair.png" />
               <div class="card-body">
                 <h4 class="">Mobile Servicing</h4>
@@ -113,7 +113,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="card border-0 mb-3 text-center">
+            <div class="card bg-primary border-0 mb-3 text-center">
               <img class="card-img-top mx-auto benefit-icon" src="img/icons/tools.png" />
               <div class="card-body">
                 <h4 class="card-title">Quality Assurance</h4>
@@ -122,7 +122,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="card border-0 mb-3 text-center">
+            <div class="card bg-primary border-0 mb-3 text-center">
               <img class="card-img-top mx-auto benefit-icon" src="img/icons/mechanic.png" />
               <div class="card-body">
                 <h4 class="card-title">Dependable Experts</h4>
@@ -155,7 +155,7 @@
         <h2 class="pb-3">Merchandise</h2>
         <div class="row row-cols-1 row-cols-md-4">
           <div class="col">
-            <div class="card mb-3 text-center">
+            <div class="card mb-3 bg-primary text-center">
               <img class="card-img-top merch-img" src="img/merch_mug.jpeg" alt="Mug" />
               <div class="card-body">
                 <h4 class="card-title">Coffee Mug</h4>
@@ -164,7 +164,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="card mb-3 text-center">
+            <div class="card mb-3 bg-primary text-center">
               <img class="card-img-top merch-img" src="img/merch_glass.jpeg" alt="Glass" />
               <div class="card-body">
                 <h4 class="card-title">Glass Cup</h4>
@@ -173,7 +173,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="card mb-3 text-center">
+            <div class="card mb-3 bg-primary text-center">
               <img class="card-img-top merch-img" src="img/merch_shirt.jpg" alt="Shirt" />
               <div class="card-body">
                 <h4 class="card-title">T-shirt</h4>
@@ -182,7 +182,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="card mb-3 text-center">
+            <div class="card mb-3 bg-primary text-center">
               <img class="card-img-top merch-img" src="img/merch_cap.jpg" alt="Cap" />
               <div class="card-body">
                 <h4 class="card-title">Snapback Cap</h4>
@@ -196,7 +196,7 @@
 
     <script src="js/app.js"></script>
 
-    <footer id="site-footer">
+    <footer class="bg-secondary" id="site-footer">
       <div class="container py-3">
         <div class="row text-center">
           <a href="https://www.flaticon.com/authors/icongeek26" target="_blank" rel="noopener noreferrer">Icons created by Icongeek26</a>
