try different netlify form

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="col-md-6" id="appointment-form">
           <h2 class="pb-3">Contact Us</h2>
           <!-- TODO: Add Netlify integration, add a success message response as another page? https://www.youtube.com/watch?v=myqzqyuic3I-->
-          <form name="contact" method="POST" data-netlify="true" onSubmit="submit">
+          <form name="contact" method="POST" netlify onSubmit="submit">
             <input type="text" class="form-control" id="form-name" placeholder="Name" maxlength="50" required name="name">
             <input type="email" class="form-control col-md-6 mt-3" id="form-email" placeholder="Email" maxlength="50" required name="email">
             <input type="tel" class="form-control col-md-6 mt-3" id="form-phone" placeholder="Phone Number" maxlength="15" required name="phone">
