--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <link href="css/custom.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <meta name="description" content="">
-    <!-- TODO: Favicon setup with old logo -->
     <link rel="icon" href="favicon.ico" sizes="any">
-    <link rel="icon" href="icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="icon.png">
     <link rel="manifest" href="site.webmanifest">
     <meta name="theme-color" content="#fafafa">
@@ -60,18 +58,19 @@
             </a>
           </li>
         </ul>
-        <!-- <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"><span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarCollapse"><div class="navbar-nav ms-auto"><a href="#" class="nav-item nav-link active">Home</a><a href="#" class="nav-item nav-link">Merchandise</a><a href="#" class="nav-item nav-link">Contact Us</a></div></div> -->
       </div>
     </nav>
 
-    <div class="container py-2">
-      <img src="img/logo.png" width="350">
-      <div class="textBox">
-        <h3>We bring reliable auto care to you.</h3>
-        <p class="mt-1">Cornerstone Mechanics is a team of auto repair specialists that can travel to assist anyone around LA County and Orange County. We provide a wide range of services up to dealership standards including preventative maintenance, pre-purchase inspections, and interval maintenance. </p>
-        <a href="#appointment-form">
-          <button id="hero-button" type="button" class="btn btn-primary">Schedule an appointment</button>
-        </a>
+    <div class="row py-3 mx-auto justify-content-center">
+      <img class="col-md-4 site-logo" src="img/logo.png">
+      <div class="col-md-6">
+        <div class="textBox mx-4">
+          <h3>We bring reliable auto care to you.</h3>
+          <p class="mt-1">Cornerstone Mechanics is a team of auto repair specialists that can travel to assist anyone around LA County and Orange County. We provide a wide range of services up to dealership standards including preventative maintenance, pre-purchase inspections, and interval maintenance. </p>
+          <a href="#appointment-form">
+            <button id="hero-button" type="button" class="btn btn-primary">Schedule an appointment</button>
+          </a>
+        </div>
       </div>
     </div>
 
@@ -82,10 +81,10 @@
             <img src="img/20240326_164542.jpg" class="d-block">
           </div>
           <div class="carousel-item">
-            <img src="img/20231209_143550.jpg" class="d-block">
+            <img src="img/20240411_143331.jpg" class="d-block">
           </div>
           <div class="carousel-item">
-            <img src="img/20240406_161847 a.jpg" class="d-block">
+            <img src="img/20240629_172056_1722106705468.jpeg" class="d-block">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -105,16 +104,16 @@
         <div class="row row-cols-1 row-cols-md-3">
           <div class="col">
             <div class="card bg-primary border-0 mb-3 text-center">
-              <img class="card-img-top mx-auto benefit-icon" src="img/icons/repair.png" />
+              <img class="card-img-top mt-3 mx-auto benefit-icon" src="img/icons/repair.png" />
               <div class="card-body">
-                <h4 class="">Mobile Servicing</h4>
+                <h4 class="card-title">Mobile Servicing</h4>
                 <p class="card-text">Our technicians will come to you, allowing you to save money on towing fees while staying in the comfort of your home.</p>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card bg-primary border-0 mb-3 text-center">
-              <img class="card-img-top mx-auto benefit-icon" src="img/icons/tools.png" />
+              <img class="card-img-top mt-3 mx-auto benefit-icon" src="img/icons/tools.png" />
               <div class="card-body">
                 <h4 class="card-title">Quality Assurance</h4>
                 <p class="card-text">We provide the best parts and service to ensure that our repairs get the job done with minimal appointments.</p>
@@ -123,7 +122,7 @@
           </div>
           <div class="col">
             <div class="card bg-primary border-0 mb-3 text-center">
-              <img class="card-img-top mx-auto benefit-icon" src="img/icons/mechanic.png" />
+              <img class="card-img-top mt-3 mx-auto benefit-icon" src="img/icons/mechanic.png" />
               <div class="card-body">
                 <h4 class="card-title">Dependable Experts</h4>
                 <p class="card-text">With over 15 years of experience and training, you can rest assured that your vehicle will be well taken care of.</p>
@@ -136,7 +135,6 @@
       <div class="row px-0 mt-4">
         <div class="col-md-6" id="appointment-form">
           <h2 class="pb-3">Contact Us</h2>
-          <!-- TODO: Add Netlify integration, add a success message response as another page? https://www.youtube.com/watch?v=myqzqyuic3I-->
           <form name="contact" method="POST" netlify netlify-honeypot="bot-field" onSubmit="submit">
             <input class="d-none" name="bot-field">
             <input type="text" class="form-control" id="form-name" placeholder="Name" maxlength="50" required name="name">
@@ -147,11 +145,9 @@
             <button type="submit" class="btn btn-primary mt-4">Submit</button>
           </form>
         </div>
-        <!-- TODO: Set up mobile breakpoints, larger device should have 400px height-->
-        <img id="form-image" class="col-md-6 mt-5" style="width: auto; height: 300px;" src="img/engine.png" />
+        <img class="col-md-6 mt-5 mx-auto" id="form-image" src="img/20231209_143550.jpg" />
       </div>
 
-      <!-- TODO: Merch section on its own page? -->
       <div class="container px-0 mt-4">
         <h2 class="pb-3">Merchandise</h2>
         <div class="row row-cols-1 row-cols-md-4">
