--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link href="css/custom.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <meta name="description" content="">
+    <meta name="description" content="Cornerstone Mechanics is a team of auto repair specialists that can travel to assist anyone around LA County and Orange County. We provide a wide range of services up to dealership standards including preventative maintenance, pre-purchase inspections, and interval maintenance.">
     <link rel="icon" href="favicon.ico" sizes="any">
     <link rel="apple-touch-icon" href="icon.png">
     <link rel="manifest" href="site.webmanifest">
