--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:url" content="http://cornerstonemechanicsllc.com/" />
     <meta property="og:title" content="Cornerstone Mechanics, LLC." />
     <meta property="og:description" content="Cornerstone Mechanics is a team of auto repair specialists that can travel to assist anyone around LA County and Orange County. We provide a wide range of services up to dealership standards including preventative maintenance, pre-purchase inspections, and interval maintenance." />
-    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+    <meta property="og:image" content="img/logo.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:url" content="http://cornerstonemechanicsllc.com/" />
     <meta property="twitter:title" content="Cornerstone Mechanics, LLC." />
     <meta property="twitter:description" content="Cornerstone Mechanics is a team of auto repair specialists that can travel to assist anyone around LA County and Orange County. We provide a wide range of services up to dealership standards including preventative maintenance, pre-purchase inspections, and interval maintenance." />
-    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+    <meta property="twitter:image" content="img/logo.png" />
 
     <script src="https://kit.fontawesome.com/ceaeb846ed.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
