--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Primary Meta Tags -->
     <title>Cornerstone Mechanics, LLC.</title>
     <meta name="title" content="Cornerstone Mechanics, LLC." />
-    <meta name="description" content="Cornerstone Mechanics is a team of auto repair specialists that can travel to assist anyone around LA County and Orange County. We provide a wide range of services up to dealership standards including preventative maintenance, pre-purchase inspections, and interval maintenance." />
+    <meta name="description" content="Cornerstone Mechanics is a team of auto repair specialists that can travel to assist anyone around LA County, Orange County, and the Inland Empire. We provide a wide range of services up to dealership standards including preventative maintenance, pre-purchase inspections, and interval maintenance." />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
