--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="col-md-6">
         <div class="textBox mx-4">
           <h3>We bring reliable auto care to you.</h3>
-          <p class="mt-1">Cornerstone Mechanics is a team of auto repair specialists that can travel to assist anyone around LA County and Orange County. We provide a wide range of services up to dealership standards including preventative maintenance, pre-purchase inspections, and interval maintenance. </p>
+          <p class="mt-1">Cornerstone Mechanics is a team of auto repair specialists that can travel to assist anyone around LA County, Orange County, and the Inland Empire. We provide a wide range of services up to dealership standards including preventative maintenance, pre-purchase inspections, and interval maintenance.</p>
           <a href="#appointment-form">
             <button id="hero-button" type="button" class="btn btn-primary">Schedule an appointment</button>
           </a>
